# robotics_project_2021

./: .gitignore  README.md  build_and_run.sh  frames.gv  make_project.sh  rviz_config.rviz
launch/: debug.launch  robotics_project.launch
src/robotics_hw1/: CMakeLists.txt  package.xml
src/robotics_hw1/cfg/: OdometryCalculator.cfg  VelocityEstimator.cfg
src/robotics_hw1/msg/: CalibratedParamsGtPose.msg  CalibratedParamsOdom.msg
src/robotics_hw1/src/: odometry_calculator.cpp  parameters_calibrator.cpp  velocity_estimator.cpp
src/robotics_hw1/src/include/: odometry_calculator.hpp
src/robotics_hw1/srv/: ResetOdometry.srv  SetOdometry.srv
